--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -37,3 +37,19 @@ a,
     padding: 0 2rem;
   }
 }
+
+input {
+  @apply block w-full border rounded px-2 py-1 focus:outline-none focus:ring-2 focus:ring-blue-400;
+}
+
+.btn {
+  @apply px-4 py-2 rounded text-white font-bold;
+}
+
+.btn-primary {
+  @apply bg-blue-500 hover:bg-blue-700;
+}
+
+.btn-secondary {
+  @apply bg-gray-500 hover:bg-gray-700;
+}
